Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-86023

segfault at exit in View3D importScene test case

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.0.0
    • 6.0
    • Quick: 3D
    • None
    • opengl, vulkan, metal
    • Linux/X11, macOS
    • 1
    • 9c81736714a869c21db8a15b32a55ec15a9a8229 (qt/qtquick3d/dev)

    Description

      quick3d_lancelot/data/view3d/MultipleViews2.qml segfaults at exit.

      It also has another issue; at runtime it produces the error:

      MultipleViews2.qml:135: Error: Cannot assign [undefined] to QQuick3DNode*

      that seems to be unrelated though, since removing the offending line does not fix the segfault.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            tvete Paul Olav Tvete
            vgt Eirik Aavitsland
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes