Fix crash on exit

Don't provide a QObject parent to an object that is owned by a QSharedPointer.
Both of those will try to delete the object, leading to a double delete on exit.

Fixes: QTBUG-86023
Change-Id: I647d9160cbe809d92256c89d3b9c8db13b9d099f
Reviewed-by: Andy Nichols <andy.nichols@qt.io>